--- a/kb_frontend/src/Styles/LoginSignup.css
+++ b/kb_frontend/src/Styles/LoginSignup.css
@@ -40,17 +40,34 @@
             align-content: center;
             justify-content: center;
             align-items: center;
-            gap: 30px;
+            gap: 50px;
             color: rgb(254, 49, 51);
             width: 80%;
 
-            .mb-3 {
+            .mb {
                 display: flex;
-                flex-direction: row;
-                justify-content: baseline;
-                align-content: baseline;
-                gap: 20px;
-                width: 60%;
+                flex-direction: column;
+                position: relative;
+                width: 70%;
+                height: 40px;
+
+                .mb-3 {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: baseline;
+                    align-content: baseline;
+                    gap: 20px;
+                    width: 100%;
+                }
+                .alert{
+                    position: absolute;
+                    top: 40px;
+                    width: 100%;
+                    padding: 0%;
+                    color: red;
+                    background-color: rgba(255, 255, 0, 0.562);
+                    font-size: small;
+                }
             }
             button {
                 display: flex;
