--- a/kb_frontend/src/Styles/MyOrder.css
+++ b/kb_frontend/src/Styles/MyOrder.css
@@ -55,6 +55,33 @@
                 font-size: small;
                 padding-inline: 15px;
             }
+
+            .cancelpop {
+                position: fixed;
+                top: 0;
+                left: 0;
+                background: rgba(0, 0, 0, 0.5);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                z-index: 999;
+                backdrop-filter: blur(3px);
+                width: 100%;
+                height: 100%;
+            }
+            .popup-box {
+                background: #fff;
+                padding: 20px 30px;
+                border-radius: 8px;
+                box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+                text-align: center;
+            }
+            .popup-box button {
+                margin: 10px;
+                padding: 8px 12px;
+                cursor: pointer;
+            }
+            
         }
     }
 
